# NeuroKnotenpfad-Suchmaschine

./: Cargo.toml  README.md  cadsp-implementation.md  cybernetic-aichat-arch.md
crates/neuro-node-path-engine/: Cargo.toml
crates/neuro-node-path-engine/src/: lib.rs  main.rs
crates/neuro-node-path-engine/src/core/: channel.rs  cluster.rs  interface.rs  mod.rs  neuron.rs  node.rs
crates/neuro-node-path-engine/src/engine/: audit_trail.rs  cluster_navigator.rs  mod.rs  path_resolver.rs  query_processor.rs
crates/neuro-node-path-engine/src/i18n/: definitions.rs  lemma_store.rs  mod.rs  translator.rs
crates/neuro-node-path-engine/src/repository/: code_analyzer.rs  indexer.rs  mod.rs  model_loader.rs
crates/neuro-node-path-engine/src/utils/: hashing.rs  mod.rs  serialization.rs
crates/neuro-node-path-engine/src/validation/: consensus.rs  dual_path.rs  mod.rs
crates/neuro-node-path-engine/tests/: integration_tests.rs  unit_tests.rs
src/: lib.rs
tests/: integration_tests.rs
