[package]
name = "cadsp-core"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "cadsp-api"
path = "src/bin/api.rs"

[[bin]]
name = "cadsp-cli"
path = "src/bin/cli.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# GitHub integration
octocrab = "0.17"
http = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Schema validation & crypto
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

# Code parsing
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Error handling & logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Web utilities
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
