[package]
name = "neuro-node-path-engine"
version = "1.0.0"
edition = "2021"
authors = ["Neuro Systems Lab"]
description = "NeuroNodePath Search Engine - Neural network-based repository traversal with cryptographic audit trails"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
rayon = "1.7"
regex = "1.10"
walkdir = "2.4"
git2 = "0.18"
nom = "7.1"
petgraph = "0.6"
indexmap = "2.0"
parking_lot = "0.12"
bytes = "1.5"
anyhow = "1.0"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
